tests/fixtures/pass/use-naming-dirs/.chous
use PascalCase for dirs tests/** except e2e
