tests/fixtures/fail/use-naming-violation/.chous
use PascalCase for files tests/**/*.test.ts
